# libopensync-plugin-ruby

./: .gitignore  AUTHORS  CMakeLists.txt  CTestConfig.cmake  README  TODO  index.html
cmake/modules/: FindLibLdap.cmake  FindPackageHandleStandardArgs.cmake  FindRuby.cmake  FindThunderbirdXpcom.cmake  OpenSyncDefaults.cmake  OpenSyncPlatforms.cmake  OpenSyncPlugin.cmake  find-ruby-library.patch
example/: ruby-file-sync.rb
src/: .kdev_include_paths  CMakeLists.txt  CMakeLists.txt~  file-sync  gencallbacks.rb  opensync.i  opensync.i~  opensync.rb  opensync.rb~  opensyncRUBY_wrap.c  ruby_format.c  ruby_module.c  ruby_module.c.old  ruby_module.c~  ruby_module.h  ruby_module.h~  ruby_plugin.c
tests/: CMakeLists.txt  check_data
